--- a/index.html
+++ b/index.html
@@ -31,43 +31,330 @@
 
 <body>
 
-    <header class="container">
-        <!-- flex -->
-        <nav class="container">
+
+
+    <!-- *******************************
+    GREED
+***************************<!- -->
+    <div id="DevoVederciChiaro" class=" container row">
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+        <div class="col-1">
+            <!--   <div class="space"></div> -->
+        </div>
+    </div>
 
 
 
 
+    <header>
+        <!-- nav 100% bg color-->
+        <nav class="bg-secondary">
 
+            <!-- ha del padding -->
+            <div id="nav-container" class="container d-flex justify-content-between align-items-center ">
+
+                <div id="nav-sx">
+                    <div class="logo-nav">
+                        a
+                    </div>
+                </div>
+
+
+                <div id="nav-dx">
+
+                    <!-- border radius  -->
+                    <div class="h-menu-nav d-sm-none">
+
+                        <button class="btn btn-outline-light">
+                            <i class="fa-solid fa-bars"></i>
+                        </button>
+
+
+                    </div>
+
+                    <div class="link-nav d-none d-sm-block">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"> link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"> link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"> link</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
         </nav>
 
-        <div id="start" class="jumbotrone container">
-        </div>
+        <article class="bg-primary">
 
+            <div id="jumbotrone-container" class="container d-flex justify-content-center">
+
+                <div class="col-10 col-sm-8">
+
+                    <div id="jumbotrone-content" class="text-center">
+
+                        <div class="img-container">
+                            <img src="" alt="" class="img-fluid ">
+                        </div>
+
+                        <div class="title">
+                            <h1>t</h1>
+                        </div>
+
+                        <div class="star-container">
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <div class="subtitle">
+                            <h3>st</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
     </header>
 
-    <main class="container">
 
-        <section id="portfolio" class="container">
 
+    <main class="text-center">
+
+        <section>
+            <div id="portfolio" class="container">
+                <div class="row row-cols-s-12 row-cols-sm-2 row-cols-md-3">
+
+                    <!-- ______________________________________________row-cols-{breakpoint}-X è sufficiente. come posso chiamare le col? se metto solo "col" prendono il comportamento di default di riempimento automatico su tutta la lunghezza, ma il -12 mi appare sbagliato -->
+
+                    <div class=" col-12">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class=" col-12 ">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class=" col-12 ">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class=" col-12 ">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class=" col-12 ">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class=" col-12">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
 
 
-        <section id="about" class="container">
+        <section class="bg-primary">
 
+            <div id="about" class="container">
+
+                <div class="title">
+                    <h2>t</h2>
+                </div>
+
+                <div class="star-container">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+
+                <div class=" d-flex justify-content-center text-start">
+
+                    <div class="col-8 col-sm-10 col-md-12">
+                        <div class="d-flex flex-column flex-sm-row">
+                            <div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam obcaecati
+                                    illum
+                                    explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
+                                    tempore
+                                    porro aperiam quos fugit!
+                                    Illum temporibus recusandae corporis sed placeat rerum tempore voluptatibus quos,
+                                    facilis
+                                    autem dolores nobis iure fugit eum quidem inventore dicta ipsa aliquam quisquam ab
+                                    error
+                                    dolorem aut. Voluptates, exercitationem magni!
+                                </p>
+                            </div>
+                            <div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam obcaecati
+                                    illum
+                                    explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
+                                    tempore
+                                    porro aperiam quos fugit!
+                                    Illum temporibus recusandae corporis sed placeat rerum tempore voluptatibus quos,
+                                    facilis
+                                    autem dolores nobis iure fugit eum quidem inventore dicta ipsa aliquam quisquam ab
+                                    error
+                                    dolorem aut. Voluptates, exercitationem magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <button class="btn btn-outline-light">
+                        a
+                    </button>
+                </div>
+            </div>
         </section>
 
 
-        <section id="contact" class="container">
+        <section>
+            <div id="contact" class="container">
 
+                <div class="title">
+                    <h2>t</h2>
+                </div>
+
+                <div class="star-container">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+
+
+                <div class=" d-flex justify-content-center text-start">
+
+                    <div class="col-8 col-md-10">
+
+
+                        <form action="#" method="get">
+
+                            <div>
+                                <label for="name">name</label>
+                                <input id="name" type="text" name="mame">
+                            </div>
+
+                            <div>
+                                <label for="email">email address</label>
+                                <input id="email" type="email" name="email">
+                            </div>
+
+                            <div>
+                                <label for="phone">phone number</label>
+                                <input id="phone" type="number" name="phone">
+                            </div>
+
+                            <div>
+                                <label for="message">message</label>
+                                <input id="message" type="text">
+                            </div>
+
+
+                            <button class="btn btn-success">
+
+                            </button>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
-    <footer class="container">
+    <footer class="bg-secondary text-center">
+        <div id="footer-container" class="container d-flex justify-content-center">
+            <div class="col-10 col-md-12">
 
+                <div class="row row-cols-s-12 row-cols-sm-3 ">
+
+                    <!-- ______________________________________________row-cols-{breakpoint}-X è sufficiente. come posso chiamare le col? se metto solo "col" prendono il comportamento di default di riempimento automatico su tutta la lunghezza, ma il -12 mi appare sbagliato -->
+
+                    <div class=" col-12">
+
+                        <div class="footer-sx">
+                            <h3 class="title">t</h3>
+                            <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit
+                                maiores
+                                explicabo suscipit asperiores repellat unde. Totam fuga explicabo provident nulla id
+                                molestias, voluptas iste unde ex numquam, earum molestiae harum.</p>
+
+                        </div>
+                    </div>
+
+                    <div class=" col-12 ">
+                        <div class="footer-middle">
+                            <h3 class="title">t</h3>
+
+                            <a href="#">
+                                <i>icona</i>
+                            </a>
+                            <a href="#">
+                                <i>icona</i>
+                            </a>
+                            <a href="#">
+                                <i>icona</i>
+                            </a>
+                            <a href="#">
+                                <i>icona</i>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <div class=" col-12 ">
+                        <div class="footer-dx">
+                            <h3 class="title">t</h3>
+                            <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit
+                                maiores
+                                explicabo suscipit asperiores repellat unde. Totam fuga explicabo provident nulla id
+                                molestias, voluptas iste unde ex numquam, earum molestiae harum.</p>
+                            <a href="#">link</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div id="copyright">
+            <p> copyright</p>
+        </div>
 
     </footer>
-
 </body>
 
 </html>
