--- a/index.html
+++ b/index.html
@@ -79,45 +79,45 @@
 
 
     <header class="bg-primary">
-        <!-- nav 100% bg color-->
-        <!--  <nav class="bg-secondary">
 
-
-            <div id="nav-container" class="container d-flex justify-content-between align-items-center ">
-
-                <div id="nav-sx">
-                    <div class="logo-nav">
-                        a
-                    </div>
+<!-- navbar bootstrap -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+            <!-- il container è flex -->
+            <div class="container text-uppercase w-100">
+                <div id="nav-sx" class="w-bold">
+                    <!-- logo sx -->
+                    <a class="navbar-brand" href="#">start bootstrap</a>
                 </div>
 
+                <!-- omesso:  data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" -->
 
-                <div id="nav-dx">
-
-                    <div class="h-menu-nav d-md-none">
-
-                        <button class="btn btn-outline-light">
-                            <i class="fa-solid fa-bars"></i>
-                        </button>
-                    </div>
-
-                    <div class="link-nav d-none d-md-block">
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> link</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> link</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> link</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div id="nav-dx-mobile" class="ms-auto text-end">
+                    <button class="btn navbar-toggler" type="button">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
 
+                <!--omesso: id="navbarNavDropdown" -->
+
+                <!-- questa stringa di classi fa ridurre la nav-link quando l'altra si allarga -->
+                <div id="nav-sx-md" class="collapse navbar-collapse flex-grow-0">
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#portfolio">portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </nav> -->
+
+        </nav>
+
 
 
         <article id="jumbotrone-container" class="container m-auto">
