--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <header class="bg-primary">
 
-<!-- navbar bootstrap -->
+        <!-- navbar bootstrap -->
         <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
             <!-- il container è flex -->
             <div class="container text-uppercase w-100">
@@ -127,20 +127,18 @@
                     <div id="jumbotrone-content" class="text-center">
 
                         <div class="img-container">
-                            <img src="" alt="" class="img-fluid ">
+                            <img src="img/avatar.svg" alt="" class="w-25">
                         </div>
 
-                        <div class="title">
-                            <h1>t</h1>
-                        </div>
+                        <h1 class="title text-uppercase border">start bootstrap</h1>
+
 
                         <div class="star-container">
                             <i class="fa-solid fa-star"></i>
                         </div>
 
-                        <div class="subtitle">
-                            <h3>st</h3>
-                        </div>
+                        <h3 class="subtitle text-uppercase">graphic artist - web designer - illustrator</h3>
+
                     </div>
                 </div>
             </div>
@@ -150,32 +148,49 @@
 
 
     <main class="text-center">
+        <h2 class="title text-uppercase border"> portfolio</h2>
+        <div class="star-container">
+            <i class="fa-solid fa-star"></i>
+        </div>
+
 
         <section id="portfolio" class="container">
             <div class="row row-cols-12 row-cols-md-2 row-cols-lg-3">
 
                 <div class=" col-12">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/cabin.png" alt="">
+                    </div>
                 </div>
 
                 <div class=" col-12 ">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/cake.png" alt="">
+                    </div>
                 </div>
 
                 <div class=" col-12 ">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/circus.png" alt="">
+                    </div>
                 </div>
 
                 <div class=" col-12 ">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/game.png" alt="">
+                    </div>
                 </div>
 
                 <div class=" col-12 ">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/safe.png" alt="">
+                    </div>
                 </div>
 
                 <div class=" col-12">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img class="img-fluid card-img" src="img/submarine.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -184,10 +199,7 @@
         <div class="bg-primary">
             <section id="about" class="container">
 
-                <div class="title">
-                    <h2>t</h2>
-                </div>
-
+                <h2 class="title text-uppercase border">about</h2>
                 <div class="star-container">
                     <i class="fa-solid fa-star"></i>
                 </div>
@@ -203,11 +215,7 @@
                                     explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
                                     tempore
                                     porro aperiam quos fugit!
-                                    Illum temporibus recusandae corporis sed placeat rerum tempore voluptatibus quos,
-                                    facilis
-                                    autem dolores nobis iure fugit eum quidem inventore dicta ipsa aliquam quisquam ab
-                                    error
-                                    dolorem aut. Voluptates, exercitationem magni!
+
                                 </p>
                             </div>
                             <div class="col-12">
@@ -216,11 +224,7 @@
                                     explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
                                     tempore
                                     porro aperiam quos fugit!
-                                    Illum temporibus recusandae corporis sed placeat rerum tempore voluptatibus quos,
-                                    facilis
-                                    autem dolores nobis iure fugit eum quidem inventore dicta ipsa aliquam quisquam ab
-                                    error
-                                    dolorem aut. Voluptates, exercitationem magni!
+
                                 </p>
                             </div>
                         </div>
@@ -228,8 +232,8 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-outline-light">
-                        a
+                    <button class="btn btn-outline-light text-capitalize">
+                        <i class="fa-solid fa-download"></i> download
                     </button>
                 </div>
             </section>
@@ -238,13 +242,11 @@
 
         <section id="contact" class="container">
 
-            <div class="title">
-                <h2>t</h2>
-            </div>
-
+            <h2 class="title text-uppercase border">contact</h2>
             <div class="star-container">
                 <i class="fa-solid fa-star"></i>
             </div>
+
 
 
             <div class=" row justify-content-center text-start">
