--- a/index.html
+++ b/index.html
@@ -31,57 +31,10 @@
 
 <body>
 
-
-
-    <!-- *******************************
-    GREED
-***************************<!- -->
-    <div id="DevoVederciChiaro" class=" container row">
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-        <div class="col-1">
-            <!--   <div class="space"></div> -->
-        </div>
-    </div>
-
-
-
-
-    <header class="bg-primary text-light">
+    <header class="my-bg-primary text-light">
 
         <!-- navbar bootstrap -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+        <nav class="navbar navbar-expand-md navbar-dark my-bg-secondary-dark">
             <!-- il container è flex -->
             <div class="container text-uppercase w-100">
                 <div id="nav-sx" class="w-bold">
@@ -287,42 +240,45 @@
                 <div class="col-8 col-lg-10">
 
 
-                    <form action="#" method="get">
+                    <form action="#" method="get" class="row ">
 
-                        <div>
-                            <label for="name">name</label>
-                            <input id="name" type="text" name="mame">
+                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                            <input type="text" class="form-control my-form-control" id="user-name" placeholder="name">
+                            <label for="user-name">name </label>
                         </div>
 
-                        <div>
-                            <label for="email">email address</label>
-                            <input id="email" type="email" name="email">
-                        </div>
-
-                        <div>
-                            <label for="phone">phone number</label>
-                            <input id="phone" type="number" name="phone">
-                        </div>
-
-                        <div>
-                            <label for="message">message</label>
-                            <input id="message" type="text">
+                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                            <input type="email" class="form-control my-form-control" id="user-email"
+                                placeholder="Email address">
+                            <label for="user-email">Email address</label>
                         </div>
 
 
-                        <button class="btn btn-success">
+                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0">
+                            <input type="number" class="form-control my-form-control" id="user-number"
+                                placeholder="phone number">
+                            <label for="user-number">phone number</label>
+                        </div>
 
-                        </button>
 
+
+
+                        <div class="form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                            <textarea class="form-control my-form-control" placeholder="message"
+                                id="Textarea"></textarea>
+                            <label for="Textarea">Comments</label>
+                        </div>
+
+
+                        <button class="btn btn-success col-1"> send </button>
                     </form>
                 </div>
-            </div>
         </section>
     </main>
 
 
-    <div class="bg-secondary text-light">
-        <footer id="footer-container" class="container  text-center">
+    <footer class=" my-bg-secondary text-light  text-center">
+        <div id="footer-container" class="container ">
             <div class="row justify-content-center">
 
 
@@ -344,18 +300,23 @@
                             <div class="footer-middle">
                                 <h3 class="title text-uppercase">around the web</h3>
 
-                                <div class="d-inline-block border-light rounded-5"> <a
-                                        class=" fa-fw m-1 d-inline-block text-light text-decoration-none fa-brands fa-facebook-f "
-                                        href="#"> </a></div>
-                                <div class="d-inline-block border-light rounded-5"> <a
+                                <div class="d-inline-block border-light border m-1 rounded-5">
+                                    <a class=" fa-fw m-1 d-inline-block text-light text-decoration-none fa-brands fa-facebook-f "
+                                        href="#"> </a>
+
+                                </div>
+                                <div class="d-inline-block border-light border m-1 rounded-5"> <a
                                         class=" fa-fw m-1 d-inline-block text-light text-decoration-none fa-brands fa-google-plus-g"
-                                        href="#"> </a></div>
-                                <div class="d-inline-block border-light rounded-5"> <a
+                                        href="#"> </a>
+                                </div>
+                                <div class="d-inline-block border-light border m-1 rounded-5"> <a
                                         class=" fa-fw m-1 d-inline-block text-light text-decoration-none fa-brands fa-twitter"
-                                        href="#"> </a></div>
-                                <div class="d-inline-block border-light rounded-5"> <a
+                                        href="#"> </a>
+                                </div>
+                                <div class="d-inline-block border-light border m-1 rounded-5"> <a
                                         class=" fa-fw m-1 d-inline-block text-light text-decoration-none fa-brands fa-linkedin-in "
-                                        href="#"> </a> </div>
+                                        href="#"> </a>
+                                </div>
 
                             </div>
                         </div>
@@ -372,12 +333,11 @@
                     </div>
                 </div>
             </div>
-
-            <div id="copyright">
-                <p> copyright</p>
-            </div>
-        </footer>
-    </div>
+        </div>
+        <div class=" my-bg-secondary-dark" id="copyright">
+            <p> copyright</p>
+        </div>
+    </footer>
 
 </body>
 
