--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 
-        <article id="jumbotrone-container" class="container m-auto">
+        <article id="jumbotrone-container" class="container m-auto py-5">
             <div class="row justify-content-center">
 
                 <div class="col-10 col-md-8">
@@ -83,9 +83,9 @@
                             <img src="img/avatar.svg" alt="" class="w-25">
                         </div>
 
-                        <h1 class="title text-uppercase border">start bootstrap</h1>
+                        <h1 class="title text-uppercase pb-4">start bootstrap</h1>
 
-                        <div class="star-strole-container">
+                        <div class="star-strole-container pb-4">
                             <div class="bg-light star-stroke"></div>
                             <i class="star-icon fa-solid fa-star"></i>
                             <div class=" bg-light star-stroke"></div>
@@ -110,9 +110,9 @@
 
 
 
-    <main class="text-center">
-        <h2 class="title text-uppercase border"> portfolio</h2>
-        <div class="star-strole-container">
+    <main class="text-center py-5 ">
+        <h2 class="pb-3 title text-uppercase "> portfolio</h2>
+        <div class="star-strole-container pb-4">
 
             <div class="star-stroke"></div>
             <i class="star-icon fa-solid fa-star"></i>
@@ -120,7 +120,7 @@
         </div>
 
 
-        <section id="portfolio" class="container">
+        <section id="portfolio" class="container pb-5">
             <div class="row row-cols-12 row-cols-md-2 row-cols-lg-3">
 
                 <div class=" col-12">
@@ -162,12 +162,12 @@
         </section>
 
 
-        <div class="bg-primary text-light">
+        <div class="my-bg-primary text-light py-5">
             <section id="about" class="container">
 
-                <h2 class="title text-uppercase border">about</h2>
+                <h2 class="pb-3 title text-uppercase ">about</h2>
 
-                <div class="star-strole-container">
+                <div class="star-strole-container pb-4">
                     <div class="bg-light star-stroke"></div>
                     <i class="star-icon fa-solid fa-star"></i>
                     <div class="bg-light star-stroke"></div>
@@ -208,7 +208,7 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-outline-light text-capitalize">
+                    <button class="btn btn-outline-light text-capitalize mt-2">
                         <i class="fa-solid fa-download"></i> download
                     </button>
                 </div>
@@ -216,9 +216,9 @@
         </div>
 
 
-        <section id="contact" class="container">
+        <section id="contact" class="container pt-5">
 
-            <h2 class="title text-uppercase border">contact</h2>
+            <h2 class="pb-3 title text-uppercase ">contact</h2>
             <div class="star-stroke-container">
 
                 <div class="star-stroke"></div>
@@ -270,16 +270,16 @@
                         </div>
 
 
-                        <button class="btn btn-success col-1"> send </button>
+                        <button class="btn btn-success my-bg-primary border-0 my-2 col-1"> send </button>
                     </form>
                 </div>
         </section>
     </main>
 
 
-    <footer class=" my-bg-secondary text-light  text-center">
+    <footer class=" my-bg-secondary text-light  text-center ">
         <div id="footer-container" class="container ">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center pt-5 pb-3">
 
 
                 <div class="col-10 col-lg-12">
@@ -325,7 +325,7 @@
                             <div class="footer-dx">
                                 <h3 class="title  text-uppercase">about freelancer</h3>
                                 <p class="text">freelance is a free to use, open source Bootstrap theme
-                                    created by<a class="text-capitalize link-primary" href="#">start
+                                    created by<a class="text-capitalize my-txt-primary" href="#">start
                                         bootstrap</a>
                                 </p>
                             </div>
@@ -334,7 +334,7 @@
                 </div>
             </div>
         </div>
-        <div class=" my-bg-secondary-dark" id="copyright">
+        <div class=" my-bg-secondary-dark py-4" id="copyright">
             <p> copyright</p>
         </div>
     </footer>
